# hyper-haskell

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS  LICENSE  Makefile  README.md  cabal.project  flake.nix  justfile  runHyperHaskell.command
.github/: FUNDING.yml
.github/workflows/: build-haskell.yml
app/: main.css  package.json  preferences.css  preferences.html  worksheet.css  worksheet.html
app/lib/: codemirror-5.6.css  codemirror-5.7.js
app/lib/FiraCode_1.203/: LICENSE
app/src/: fileformat.js  glitter.js  interpreter-worksheet.js  interpreter.js  main.js  preferences-preload.js  preferences.js  sequence.js  supply.js  worksheet-preload.js  worksheet.js
docs/: INSTALL.md  TODO.md  misc.md
docs/ghc-env/: README.md  ghc-env.cabal  mk-ghc-env.sh
docs/hcar/: hyperhaskell-2016-11.tex  hyperhaskell-2017-05.tex  hyperhaskell-2017-11.tex  template.tex
docs/icons/: icon.graffle  icon.icns  makeicns.sh
haskell/: hyper-haskell-server.nix  stack.yaml
haskell/hyper/: hyper.cabal
haskell/hyper-extra/: CHANGELOG.md  LICENSE  hyper-extra.cabal
haskell/hyper-extra/src/Hyper/: Extra.hs
haskell/hyper-haskell-server/: LICENSE  Main.hs  hyper-haskell-server.cabal
haskell/hyper-haskell-server/src/: Main.hs
haskell/hyper-haskell-server/src/HyperHaskell/: Interpreter.hs
haskell/hyper/src/: Hyper.hs
haskell/hyper/src/Hyper/: Internal.hs
resources/: LICENSE.electron.txt  hyper-haskell.desktop  macOS-Info.plist  shared-mime-info.xml
resources/icons/: icon.graffle
worksheets/: Csound.hhs  Diagrams.hhs  JavaScript.hhs  JavaScript.hs  Prelude.hhs  Test.hhs  Test.hs
