Name:               hyper-extra
Version:            0.2.0.1
Synopsis:           Display instances for the HyperHaskell graphical Haskell interpreter
Description:
  This package is part of the /HyperHaskell/ project and provides
  visual representations for various data types, in particular
  diagrams from the @diagrams@ package.
  .
Category:           Graphics, Pretty Printer
Homepage:           https://github.com/HeinrichApfelmus/hyper-haskell
License:            BSD3
License-file:       LICENSE
Author:             Heinrich Apfelmus
Maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
Copyright:          (c) Heinrich Apfelmus 2016-2024

Cabal-version:      >= 1.10
Build-type:         Simple
Tested-With: 
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.4
  , GHC == 8.10.7
  , GHC == 9.2.8
  , GHC == 9.4.7
  , GHC == 9.6.4
  , GHC == 9.8.1

Source-repository head
    type:               git
    location:           git://github.com/HeinrichApfelmus/hyper-haskell.git
    subdir:             haskell/hyper-extra/

Library
    hs-source-dirs:     src
    build-depends:      base           >= 4.6     && < 4.20
                        , text         >= 0.11    && < 2.2
                        , diagrams-lib >= 1.3     && < 1.5
                        , diagrams-svg >= 1.4     && < 1.5
                        , svg-builder  == 0.1.*
                        , QuickCheck   >= 2.3.0.2 && < 2.15
                        , hyper        >= 0.2     && < 0.3
    exposed-modules:    Hyper.Extra
    default-language:   Haskell2010

