Name:               hyper-haskell-server
Version:            0.2.3.0
Synopsis:           Server back-end for the HyperHaskell graphical Haskell interpreter
Description:
  This package is part of the /HyperHaskell/ project and provides
  the server back-end.
  .
Category:           Compilers/Interpreters
Homepage:           https://github.com/HeinrichApfelmus/hyper-haskell
License:            BSD3
License-file:       LICENSE
Author:             Heinrich Apfelmus
Maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
Copyright:          (c) Heinrich Apfelmus 2016-2020

Cabal-version:      >= 1.10
Build-type:         Simple

Source-repository head
    type:               git
    location:           git://github.com/HeinrichApfelmus/hyper-haskell.git
    subdir:             haskell/hyper-haskell-server/

Executable hyper-haskell-server
    build-depends:      base           >= 4.6   && < 4.15
                        , aeson       (>= 0.7   && < 0.10) || == 0.11.* || (>= 1.0 && < 1.6)
                        , bytestring   >= 0.9   && < 0.12
                        , deepseq      >= 1.2   && < 1.5
                        , exceptions   >= 0.6   && < 0.11
                        , filepath     >= 1.0   && < 1.5
                        , haskell-src-exts >= 1.17 && < 1.24
                        , hint         >= 0.8   && < 0.10
                        , hyper        == 0.2.*
                        , text         >= 0.11  && < 1.3
                        , transformers >= 0.3   && < 0.6
                        , scotty       >= 0.6   && < 0.13
    ghc-options:        -threaded
    cpp-Options:        -DCABAL
    main-is:            Main.hs
    default-language:   Haskell2010
