Name:               hyper
Version:            0.1.0.3
Synopsis:           Display class for the HyperHaskell graphical Haskell interpreter
Description:
  This package is part of the /HyperHaskell/ project and provides
  the @Display@ class for visualizing and pretty printing Haskell values.
  .
Category:           Graphics, Pretty Printer
Homepage:           https://github.com/HeinrichApfelmus/hyper-haskell
License:            BSD3
License-file:       LICENSE
Author:             Heinrich Apfelmus
Maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
Copyright:          (c) Heinrich Apfelmus 2016-2018

Cabal-version:      >= 1.8
Build-type:         Simple

Source-repository head
    type:               git
    location:           git://github.com/HeinrichApfelmus/hyper-haskell.git
    subdir:             haskell/hyper/

Library
    hs-source-dirs:     src
    build-depends:      base         >= 4.6   && < 4.13
                        , deepseq    >= 1.2   && < 1.5
                        , blaze-html >= 0.7   && < 0.10
                        , text       >= 0.11  && < 1.3
    exposed-modules:    Hyper
                        , Hyper.Internal
